QuickGrapher ChangeLog

-- Changed on 2/8/2011 --
Ticket #41: Re-wrote sharethis integration to be dynamic based on dynamic API
No ticket: randomized startup function (is it confusing?)
Ticket #45: SHareThis api links only work once and are static, this was resolved
Ticket #44: Setup test suite: now there is test-suite html and javascript file

-- Changed on 2/7/2011 --
Ticket #35: Updated CSS for fullscreen toggle button.
Ticket #29: Tweaked text changes from Adrienne and updated link CSS.
Ticket #27: Updated instructions with help page links
No ticket: re-munged for update to website and pushed to live site

-- Changed On 2/3/2011 --
No ticket: Social Media Features
Ticket #30: Min and Max Functions
Ticket #20: Temperature Conversion Equations C-f f-C
Ticket #21: Sliders Correctly Reposition If Min/Max bounds issues
Ticket #28: Image Walkthroughs Added v1
--Help Page
--Tutorials Page (Video)
--Annotated Walkthrough (Images and text)
Ticket #8: Negation in first position
No ticket: Quick tweak to sharing bar at the bottom until we have better solution.