@@ -1,5 +1,10 @@
 QuickGrapher ChangeLog
 
+-- Changed on 2/9/2011 --
+Ticket #43: Added save as png button
+Ticket #48: Clears old min/max/step values
+Ticket #47: Add a clear equation button
+
 -- Changed on 2/8/2011 --
 Ticket #41: Re-wrote sharethis integration to be dynamic based on dynamic API
 No ticket: randomized startup function (is it confusing?)
